adjusted button text

--- a/mock-1.html
+++ b/mock-1.html
@@ -28,7 +28,7 @@
 	    	<div class="panel-footer" style="height:100px">
     	  		Status:<strong>Complete</strong><br/>
     	  		3 TA2s Provisioned<br/>
-	    		<button type="button" class="btn btn-success">Re-Examine</button>
+	    		<button type="button" class="btn btn-success" style="font-size:small">Re-Examine Problem</button>
 	    	</div>
 	    </div>
 	  </div>
@@ -43,7 +43,7 @@
 	    	<div class="panel-footer" style="height:100px">
 	    		Status: <strong>solutions complete</strong><br/>
 				9 models built<br/>
-	    		<button type="button" class="btn btn-success">Revisit Statistics</button>
+	    		<button type="button" class="btn btn-success" style="font-size:small">Revisit Statistics</button>
 	    	</div>
 	    </div>
 	  </div>
@@ -58,8 +58,8 @@
 	    	<div class="panel-footer"  style="height:100px">
 	    		Status: examining 9 models<br>
 	    		No metric selected<br/>
-	    		<button type="button" class="btn btn-primary">In Progress</button>
-	    		<button type="button" class="btn btn-warning">Guess for Me</button>
+	    		<button type="button" class="btn btn-primary" style="font-size:small">In Progress</button>
+	    		<button type="button" class="btn btn-warning" style="font-size:small">Guess for Me</button>
 			</div>
 	    </div>
 	  </div>
@@ -74,8 +74,8 @@
 	    	<div class="panel-footer"  style="height:100px">
 	    		Status: waiting for metrics<br/>
 	    		No models selected<br/>
-	    		<button type="button" class="btn btn-primary" disabled>Not Ready</button>
-	    		<button type="button" class="btn btn-warning" disabled>Guess for Me</button>
+	    		<button type="button" class="btn btn-primary"  style="font-size:small" disabled>Not Ready</button>
+	    		<button type="button" class="btn btn-warning"  style="font-size:small" disabled>Guess for Me</button>
 			</div>
 	    </div>
 	  </div>
@@ -89,8 +89,8 @@
 	    	<div class="panel-footer" style="height:100px">
 	    		Status: waiting model select<br/>
 	    		Not ready<br/>
-	    		<button type="button" class="btn btn-primary" disabled>Review Result</button>
-	    		<button type="button" class="btn btn-warning" disabled>Box and Ship!</button>	    		
+	    		<button type="button" class="btn btn-primary"  style="font-size:small" disabled>Review Result</button>
+	    		<button type="button" class="btn btn-warning"  style="font-size:small" disabled>Box and Ship!</button>	    		
 	    	</div>
 	    </div>
 	  </div>
