experiment with checks

--- a/mock-1.html
+++ b/mock-1.html
@@ -24,9 +24,9 @@
 	    		<h4 class="">Phase 1</h4>Define and Start
 			</div>
 	    	<div class="panel-body phase-overview-body">
-	    	  <p>Edit the problem definition,</p>
-	    	  <p>Provision the backends (TA2)</p>
-	    	  <p>Start the model builders </p>
+			  <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Edit the problem definition,</p>
+	    	  <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Provision the backends (TA2)</p>
+	    	  <p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Start the model builders </p>
 	    	</div>
 	    	<div class="panel-footer phase-overview-footer">
     	  		Status:<strong>Complete</strong><br/>
@@ -41,9 +41,9 @@
 	    		<h4>Phase 2</h4>Wait for the Models to Build
 			</div>
 	    	<div class="panel-body phase-overview-body">
-	    	  <p>Keep yourself busy why the TA2 backends do their work</p>
-	    	  <p>Examine the data</p>
-	    	  <p>Control the model building process (cut it off) </p>
+	    	  <p><p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Keep yourself busy why the TA2 backends do their work</p>
+	    	  <p><p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Control the model building process (cut it off) </p>
+	    	  <p><p><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Examine the solver logs</p>
 	    	</div>
 	    	<div class="panel-footer phase-overview-footer">
 	    		Status: <strong>solutions complete</strong><br/>
@@ -58,10 +58,10 @@
 	    		<h4>Phase 3</h4>Overview Results
 			</div>
 	    	<div class="panel-body phase-overview-body">
-	    	  <p>Examine a summary of the model results</p>
-	    	  <p>Get an overview of the performance of the models</p>
-	    	  <p>Select and refine a metric for selection </p>
-	    	</div>
+	    	  <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Examine a summary of the model results</p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Get an overview of the performance of the models</p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Select and refine a metric for selection </p>
+    	  </div>
 	    	<div class="panel-footer phase-overview-footer">
 	    		Status: examining 9 models<br>
 	    		No metric selected<br/>
@@ -76,9 +76,9 @@
 	    		<h4>Phase 4</h4>Detailed Assessment
 			</div>
 	    	<div class="panel-body phase-overview-body">
-	    	  <p>Examine the model results in detail</p>
-	    	  <p>Compare specific models</p>
-	    	  <p>Select which models to use </p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Examine the model results in detail</p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Compare specific models</p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Select which models to use </p>
 	    	</div>
 	    	<div class="panel-footer phase-overview-footer">
 	    		Status: waiting for metrics<br/>
@@ -94,8 +94,8 @@
 	    		<h4>Phase 5</h4>Build and Package Result
 			</div>
 	    	<div class="panel-body phase-overview-body">
-	    	  <p>Check that the selected models behave as expected</p>
-	    	  <p>Build an executable of the constructed models </p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Check that the selected models behave as expected</p>
+	    	  <p><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>Build an executable of the constructed models </p>
 	    	</div>
 	    	<div class="panel-footer phase-overview-footer">
 	    		Status: waiting model select<br/>
